--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         
                     </p>
                 </div>
-                
+		    </section>        
         <section class="section sec3" id="portfolio">
             <div class="main-title">
                 <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
